tests/mm0_mmu/fail/bad-sort324.mm0
-- bad modifier order
provable strict free sort s324;